@@ -37,7 +37,8 @@ CHANGED:
 
   * CAT-SOOP will use date-based versioning moving forward.  Planned regular
     releases are 20XX.9 and 20XX.2 (September and February, corresponding with
-    the start of the fall and spring terms at MIT, respectively).
+    the start of the fall and spring terms at MIT, respectively).  Each release
+    will also now have a codename.
 
   * Upgraded KaTeX to v0.10.2.
 
